# robotpy-crio

./: .cproject  .gitignore  .gitmodules  .project  .wrproject  CMakeLists.txt  INSTALL.txt  Makefile  README-Core.txt  README-Dist.txt  README-WPILib.txt  README.txt  RobotPy.cpp  RobotPy.h.in  SWIG.txt  VERSION-GEN.bat  VERSION-GEN.sh  make_dist.bat  swig_wpilib.bat  wpilib.i
CANJaguar/: CANJaguar.cpp  can_proto.h
FRC_UserProgram/: CMakeLists.txt  FRC_UserProgram.cpp  Makefile
Modules/: CMakeLists.txt  Makefile
Modules/_bisect/: Makefile
Modules/_collections/: Makefile
Modules/_csv/: Makefile
Modules/_datetime/: Makefile
Modules/_elementtree/: Makefile  _elementtree.c
Modules/_heapq/: Makefile
Modules/_md5/: Makefile  md5module.c
Modules/_pickle/: Makefile  _pickle.c
Modules/_random/: Makefile
Modules/_sha1/: Makefile
Modules/_sha256/: Makefile  sha256module.c
Modules/_sha512/: Makefile  sha512module.c
Modules/_socket/: Makefile  socketmodule.c
Modules/_struct/: Makefile
Modules/array/: Makefile
Modules/atexit/: Makefile
Modules/binascii/: Makefile
Modules/cmath/: Makefile
Modules/datetime/: Makefile
Modules/fcntl/: CMakeLists.txt  Makefile
Modules/fpectl/: Makefile
Modules/itertools/: Makefile
Modules/math/: Makefile  mathmodule.c
Modules/operator/: Makefile
Modules/parser/: Makefile
Modules/pyexpat/: Makefile  pyexpat.c
Modules/pyexpat/expat/: xmltok.c
Modules/readline/: CMakeLists.txt  Makefile  readline.c
Modules/readline/readline/: CHANGELOG  CHANGES  INSTALL  MANIFEST  Makefile  Makefile.in  NEWS  README  aclocal.m4  bind.c  callback.c  chardefs.h  complete.c  config.h  config.h.in  configure  configure.in  display.c  funmap.c  histexpand.c  histfile.c  history.c  history.h  input.c  isearch.c  keymaps.c  keymaps.h  kill.c  macro.c  mbutil.c  misc.c  nls.c  posixdir.h  posixjmp.h  posixselect.h  readline.c  readline.h  rlconf.h  rldefs.h  rlmbutil.h  (+16 more)
Modules/readline/readline/support/: config.guess  config.sub  mkdist  shlib-install  shobj-conf
Modules/select/: Makefile
Modules/time/: Makefile
Modules/unicodedata/: Makefile
Modules/zlib/: Makefile  zlibmodule.c
PPC603gnu/: Makefile
Python/: configure.in  pyconfig.h  setup.py
Python/Demo/curses/: ncurses.py  rain.py  tclock.py  xmas.py
Python/Demo/scripts/: newslist.py
Python/Demo/tix/: tixwidgets.py
Python/Demo/tix/samples/: Balloon.py  BtnBox.py  CmpImg.py  ComboBox.py  Control.py  DirList.py  DirTree.py  NoteBook.py  OptMenu.py  PanedWin.py  PopMenu.py  SHList1.py  SHList2.py  Tree.py
Python/Doc/whatsnew/: 2.6.rst  2.7.rst
Python/Include/: patchlevel.h
Python/Lib/: hashlib.py  pydoc.py  wpilib.py
Python/Lib/distutils/: __init__.py  archive_util.py  bcppcompiler.py  ccompiler.py  cmd.py  core.py  cygwinccompiler.py  dep_util.py  dir_util.py  dist.py  emxccompiler.py  errors.py  extension.py  fancy_getopt.py  file_util.py  filelist.py  msvc9compiler.py  msvccompiler.py  sysconfig.py  text_file.py  unixccompiler.py  util.py
Python/Lib/distutils/command/: bdist.py  bdist_dumb.py  bdist_rpm.py  bdist_wininst.py  build.py  build_clib.py  build_ext.py  build_py.py  build_scripts.py  check.py  (+5 more)
Python/Lib/test/: test_hashlib.py  test_optparse.py  test_sax.py  test_textwrap.py
Python/Lib/tkinter/: __init__.py  tix.py
Python/Misc/: HISTORY  python-mode.el  python.man
Python/Modules/: _cursesmodule.c  _pickle.c  config.c  getpath.c  mathmodule.c  mmapmodule.c  ossaudiodev.c  pyexpat.c  socketmodule.c  wpilib_wrap.cxx
Python/PC/VC6/: _ctypes.dsp  _ctypes_test.dsp  _elementtree.dsp  _msi.dsp  _socket.dsp  _sqlite3.dsp  _tkinter.dsp  bz2.dsp  pcbuild.dsw  pythoncore.dsp
Python/PC/VS8.0/: pyproject.vsprops
Python/PC/bdist_wininst/: install.c
Python/Parser/: asdl_c.py
Python/Python/: dynload_vxworks.c  sysmodule.c  thread_pthread.h
Python/Tools/webchecker/: webchecker.py  websucker.py
Python/Tools/world/: world
RobotPy/: .cproject  .project  .wrproject  CMakeLists.txt  Makefile  PythonFiles.cmake  RobotPy.cpp  SWIG.txt  wchar.c  wchar.h  wpilib.i
RobotPy/CANJaguar/: CANJaguar.h
RobotPy/Python/: pyconfig.h
RobotPy/Python/Include/: pyerrors.h  pyport.h
RobotPy/Python/Lib/: pickle.py  posixpath.py  site.py  sysconfig.py  tarfile.py  textwrap.py
RobotPy/Python/Lib/xmlrpc/: client.py
RobotPy/Python/Modules/: _datetimemodule.c  _elementtree.c  _pickle.c  _tracemalloc.c  config.c  faulthandler.c  getbuildinfo.c  getpath.c  mathmodule.c  posixmodule.c  pyexpat.c  readline.c  sha1module.c  socketmodule.c  wpilib_wrap.cxx  zlibmodule.c
RobotPy/Python/Modules/expat/: xmlparse.c
RobotPy/Python/Objects/: exceptions.c
RobotPy/Python/Parser/: Python.asdl
RobotPy/Python/Python/: ceval.c  dynload_vxworks.c  fileutils.c  gettimeofday_vxworks.c  import.c  pystate.c  random.c  thread_pthread.h  traceback.c
RobotPy/ext/: CMakeLists.txt
RobotPy/ext/readline/: configure  rldefs.h  signals.c
RobotPy/missing/: getentropy.c  langinfo.h  nl_langinfo.c  wchar.h  wcstok.c
build-vm/: Berksfile  README.txt  Vagrantfile  install_sip.sh  install_toolchain.sh
cmake/: CPackConfig.cmake  FindSIP.cmake  GetGitRevisionDescription.cmake  RobotLayout.cmake  RobotpyVersion.cmake  SIPMacros.cmake
mk/: module.mk
py/: boot.py
samples/: README.txt
samples/294_2010/: Autonomous.py  Config.py  DualSpeedController.py  EncoderSource.py  Kicker.py  README.txt  WinchOutput.py  robot.py
samples/IterativeRobot-class/: robot.py
samples/Kinect/: robot.py
samples/PIDController/: robot.py
samples/SimpleRobot-class/: robot.py
samples/canjaguar/: robot.py
samples/canjaguar-motor/: robot.py
samples/simple/: robot.py
samples/template/: robot.py
sim/dspy/: dspy.py  tkled.py
sim/netcomm/: bf.py  dscomm.py  frccomm.py  protocol.txt  robotcomm.py
utilities/: README.txt
utilities/installer/: README.txt  install.py  team_upload.py
utilities/netconsole/: LICENSE  README.txt  netconsole.py  reboot.py
utilities/ripshell/: LICENSE.txt  ripshell.bat  ripshell.py  robot.py
utilities/winpdb/: README-FRC.txt  README.txt  rpdb2.py
(+1 files in other folders)
